# SpatialTranscriptFormer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Download-BowelCancer.ps1  LICENSE  README.md  TESTING.md  config.yaml  global_genes.json  pyproject.toml  setup.ps1  setup.sh  test.ps1  test.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: API.md  DATALOADER.md  DATA_FORMAT.md  DATA_STRUCTURE.md  GENE_ANALYSIS.md  IP_STATEMENT.md  LATENT_DISCOVERY.md  MODELS.md  PATHWAY_MAPPING.md  PRECOMPUTED_WORKFLOW.md  SAMPLING_STRATEGY.md  SC_BEST_PRACTICES.md  SVG_PROTOTYPE_RESULTS.md  TESTING.md  TRAINING_GUIDE.md
inspection/: analyze_gene_overlap.py  analyze_visium_overlap.py  check_gpu.py  compare_genes.py  inspect_X.py  inspect_barcodes.py  inspect_gene_names.py  inspect_h5.py  inspect_h5_barcodes.py  inspect_h5ad.py  inspect_h5ad_barcodes.py  inspect_h5ad_spatial.py  inspect_human_bowel.py  inspect_metadata.py
scripts/: analyze_expression_variance.py  analyze_performance.py  batch_qc_stats.py  calculate_global_genes.py  check_alignment.py  check_genes.py  create_toy_data.py  diagnose_collapse.py  diagnose_qc.py  download_bowel_cancer.py  download_hest.py  estimate_bowel_size.py  filter_metadata.py  find_outliers.py  inspect_checkpoint.py  inspect_data.py  inspect_outputs.py  inspect_sample.py  migrate_logs_to_sqlite.py  monitor.py  plot_log.py  predict_sample.py  run_preset.py  test_layout.py  test_memory.py  view_wsi.py
src/spatial_transcript_former/: __init__.py  checkpoint.py  config.py  predict.py  train.py  utils.py  visualization.py
src/spatial_transcript_former/dashboard/: __init__.py  app.py  callbacks.py  data_access.py  layout.py
tests/: conftest.py  debug_ctranspath_keys.py  find_ctranspath_mapping.py  inspect_timm_swin.py  test_api.py  test_augmentation_sync.py  test_backbones.py  test_bottleneck_arch.py  test_build_vocab.py  test_checkpoint.py  test_checkpoints.py  test_compile.py  test_compile_backends.py  test_config.py  test_ctranspath_load.py  test_data_integrity.py  test_dataloader_h5ad.py  test_dataset_logic.py  test_dataset_mocks.py  test_download.py  test_download_script.py  test_interactions.py  test_io.py  test_local_patch_mixer.py  test_losses.py  test_losses_robust.py  test_model_backbones.py  test_models.py  test_neighborhood.py  test_nystrom.py  test_pathway_stability.py  test_pathways.py  test_pathways_robust.py  test_quadrant_masking.py  test_spatial.py  test_spatial_alignment.py  test_spatial_augment.py  test_spatial_interaction.py  test_spatial_stats.py  test_splitting_logic.py  (+4 more)
tests/data/: test_augmentation.py  test_data_integrity.py  test_gene_vocab.py  test_pathways.py  test_visualization.py
tests/models/: test_architectures.py  test_backbones.py  test_compilation.py  test_interactions.py
tests/recipes/hest/: test_dataset.py  (+3 more)
tests/training/: test_checkpoints.py  test_config.py  test_losses.py  test_trainer.py
(+36 files in other folders)
