[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-transcript-former"
version = "0.1.0"
description = "A transformer-based model for spatial transcriptomics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "h5py",
    "torch",
    "torchvision",
    "numpy",
    "scikit-learn",
    "tqdm",
    "datasets",
    "pyarrow",
    "huggingface-hub",
    "matplotlib",
    "seaborn",
    "nystrom-attention",
    "scipy",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pre-commit",
]

[project.scripts]
stf-download = "spatial_transcript_former.data.download:main"
stf-split = "spatial_transcript_former.data.splitting:main"
stf-train = "spatial_transcript_former.train:main"
stf-predict = "spatial_transcript_former.predict:main"
stf-extract = "spatial_transcript_former.data.extract_features:main"
stf-build-vocab = "spatial_transcript_former.data.build_vocab:main"
stf-compute-pathways = "spatial_transcript_former.recipes.hest.compute_pathway_activities:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spatial_transcript_former*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:FigureCanvasAgg is non-interactive:UserWarning",
    "ignore:os.fork:RuntimeWarning",
    "ignore:torch.utils._pytree._register_pytree_node is deprecated:UserWarning",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
